<resources>
    <string name="app_name">RestaurantApp</string>
    <string name="maandag">Maandag</string>
    <string name="Dinsdag">Dinsdag</string>
    <string name="Woensdag">Woensdag</string>
    <string name="donderdag">Donderdag</string>
    <string name="vrijdag">Vrijdag</string>
    <string name="create">create</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
    <string name="eerste">07 - 11 okt 2013</string>
    <string name="tweede">14 - 18 okt 2013</string>
    <string name="derde">21 - 25 okt 2013</string>
    <string name="action_bestellen">Bestellen</string>
    <string name="action_annuleren">Annuleren</string>
    <string name="action_settings">Settings</string>
    <string name="soep">Soep</string>
    <string name="soepIngevuld">Tomatensoep</string>
    <string name="dagschotel">Dagschotel</string>
    <string name="dagschotelIngevuld">Kipfilet</string>
    <string name="pasta">Pasta</string>
    <string name="pastaIngevuld">Lasagne</string>
    <string name="vegetarisch">Vegetarisch</string>
    <string name="vegetarischIngevuld">Vegetarische Wrap</string>
    <string name="saladebar">Saladebar</string>
    <string name="saladebarIngevuld">klein/groot met vis of vlees</string>
    <string name="snack">Snack</string>
    <string name="snackIngevuld">naar keuze</string>
    <string name="dessert">Dessert</string>
    <string name="dessertIngevuld">Naar Keuze</string>
</resources>
